src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/09_nested_array_initializer_wrong_length.c
int main() {
    int matrix[2][3] = {
        {1, 2},
        {3, 4, 5}
    };

    return 0;
}